fix scroll position caption position on mobile

--- a/src/components/dom/Overlay.module.css
+++ b/src/components/dom/Overlay.module.css
@@ -83,12 +83,14 @@
 
 @media only screen and (max-width: 1000px) {
   .caption {
+    margin: 50px;
     font-size: 4em;
   }
 }
 
 @media only screen and (max-width: 800px) {
   .caption {
+    margin: 20px;
     font-size: 3em;
   }
 }
